Prevent equations from stretching next to floating images

--- a/css/New_lab_activity.css
+++ b/css/New_lab_activity.css
@@ -290,6 +290,9 @@ th[class~="topic/entry"], th[class~="topic/stentry"] {
 	font-family: serif !important;
 	font-size: 10pt;
 }
+*[class ~="equation-d/equation-block"] {
+    overflow: auto;
+}
 
 /****************************************************************/
 /*                      QUESTIONS AND ANSWERS                   */
